feat(medusa): Address PaymentService feedback

--- a/packages/medusa/tsconfig.json
+++ b/packages/medusa/tsconfig.json
@@ -21,12 +21,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "downlevelIteration": true, // to use ES5 specific tooling
-    "baseUrl": ".",
-    "paths": {
-      "@models/*": [
-        "./src/models/*"
-      ]
-    }
+    "baseUrl": "."
   },
   "include": [
     "./src/**/*",
