--- a/packages/medusa/tsconfig.json
+++ b/packages/medusa/tsconfig.json
@@ -20,13 +20,9 @@
     "noImplicitThis": true,
     "allowJs": true,
     "skipLibCheck": true,
-    "downlevelIteration": true, // to use ES5 specific tooling
-    "baseUrl": "."
+    "downlevelIteration": true // to use ES5 specific tooling
   },
-  "include": [
-    "./src/**/*",
-    "index.d.ts"
-  ],
+  "include": ["./src/**/*", "index.d.ts"],
   "exclude": [
     "./dist/**/*",
     "./src/**/__tests__",
